# agent-to-teams

./: .env.example  .gitignore  1_create_app_registration.ps1  2_create_bot_service.ps1  3_update_endpoint.ps1  README.md  body.json  pyproject.toml  start.ps1
backend/: .env.example  README.md  __init__.py  main.py
empty-agent/: .env.example  README.md  app.py  generate_app_package.ps1  pyproject.toml  start_server.py
empty-agent/appPackage/: manifest.json  manifest.template.json
frontend/: .env.example  README.md  __init__.py  app.py
step-by-step/step1/: README.md  app.py  pyproject.toml  start_server.py
step-by-step/step2/: .env.example  README.md  app.py  pyproject.toml
step-by-step/step3/: .env.example  .gitignore  README.md  app.py  generate_app_package.ps1  pyproject.toml  start_server.py
step-by-step/step3/appPackage/: manifest.template.json
teams-agent/: .env.example  Dockerfile  README.md  app.py  backend_client.py  generate_app_package.ps1  pyproject.toml  start_server.py
teams-agent/appPackage/: manifest.json  manifest.template.json
